<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        android:visible="true" />

    <item
        android:id="@+id/navigation_dashboard"

        android:title="@string/title_messages"
        android:visible="true"/>

    <item
        android:id="@+id/navigation_profile"

        android:title="@string/title_profile"
        android:visible="true"/>
    <item
        android:id="@+id/navigation_matches"

        android:title="@string/title_matches"
        android:visible="true"/>
    <item
        android:id="@+id/navigation_settings"

        android:title="@string/title_settings"
        android:visible="true"/>

</menu>
